Switch to xelatex

--- a/main.tex
+++ b/main.tex
@@ -30,5 +30,6 @@ Or just a lonely filthy starving child!
 
 %%% Local Variables:
 %%% mode: latex
+%%% TeX-engine: xetex
 %%% TeX-master: t
 %%% End:
