--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,9 @@
 \begin{document}
 \maketitle
 
-\section{Act 1}
+\section*{Act 1}
+
+\subsection*{SCENE 1}
 
 \subsubsection*{WHEREIN LEELA IS FOUND AT THE ORPHANARIUM}
 
@@ -25,6 +27,19 @@ Or something stranger still.
 BABY LEELA
 
 Or just a lonely filthy starving child!
+
+\subsection*{Scene 2}
+
+\subsubsection*{FIGHT WITH GODZILLA}
+
+BENDER
+
+Leela. Leela. Leela, save him.
+Save Fry. Save Fry.
+Godzilla will devour him.
+As for me, I must be off
+to have my doctor check this cough.
+[cough] Goodbye.
 
 \end{document}
 
