--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,27 @@ As for me, I must be off
 to have my doctor check this cough.
 [cough] Goodbye.
 
+\section*{Act 2}
+
+\subsection*{Scene 1}
+
+\subsubsection*{IN ROBOT HELL}
+
+FRY
+
+To win Leela's heart
+with the Holophonor's art,
+I need hands of transcendental quickness.
+
+ROBOT DEVIL
+
+Well, I don't see any danger
+in gambling with a stranger.
+For my head is of a most amazing thickness.
+I'm stupid, I'm stupid
+I'm stupider than you.
+I'm stupider than you in every way.
+
 \end{document}
 
 %%% Local Variables:
