--- a/main.tex
+++ b/main.tex
@@ -62,6 +62,122 @@ I'm stupid, I'm stupid
 I'm stupider than you.
 I'm stupider than you in every way.
 
+\subsection*{Scene 2}
+
+\subsubsection*{ON STAGE [unscripted]}
+
+REAL ROBOT DEVIL
+
+I want my hands back!
+
+REAL FRY
+
+Never!
+A deal's a deal!
+Even with a dirty dealer!
+
+REAL ROBOT DEVIL
+
+Very well.
+Then I'll take what I want from Leela!
+Leela has promised me her hand.
+
+REAL LEELA
+
+Fry, you do not understand!
+I should have revealed I've been deafened by Bender.
+The shame. The shame!
+But I feared you'd stop writing this musical splendor.
+Deception's the curse of my whimsical gender.
+He gave me mechanical ears.
+Effective though just a bit garish.
+In return without shedding a tear, I agreed
+that I'd give him my hand!
+
+REAL ROBOT DEVIL
+
+In marriage!
+
+REAL LEELA
+
+What?!
+
+REAL ROBOT DEVIL
+
+You'll give me your hand in marriage!
+
+REAL HERMES
+
+Is this really happening or just being staged?
+
+REAL FARNSWORTH
+
+It can't be real.
+
+REAL AMY
+
+Not if Leela is engaged.
+
+REAL LEELA [to Robot Devil]
+
+That isn't what I meant.
+That isn't what I signed!
+
+REAL ROBOT DEVIL
+
+You should have checked the wording in the fine - print.
+
+REAL LEELA [reading contract]
+
+I'll give you my hand-
+
+REAL LEELA AND ROBOT DEVIL
+
+In marriage.
+
+REAL BENDER
+
+The use of words expressing something of the other than the literal intention.
+Now that is irony.
+
+REAL ROBOT DEVIL
+
+I will marry her now and confine her to hell.
+How droll. How droll!
+Where Styx is a river and not just a band.
+Though they'll play our reception if all goes as planned.
+Unless Fry, you surrender my hands!
+
+REAL FRY
+
+Destiny has cheated me
+by forcing me to decide upon
+the woman that I idolize
+or the hands of of an automaton.
+Without these hands I can't complete
+the opera that was captivating her.
+But if I keep them, and she marries him.
+Than he probably won't want me dating her.
+
+REAL FARNSWORTH
+
+I can't believe the devil is so unforgiving!
+
+REAL ZOIDBERG
+
+I can't believe everybody is just ad libbing.
+
+REAL PREACHER BOT
+
+By the powers vested in me by the state of New New York-
+
+REAL FRY [pushes Robot Devil and Preacher Bot away]
+
+No! Stop! Take my hands!
+You evil, metal dork!
+
+REAL ROBOT DEVIL [chops Fry's hands off]
+
 \end{document}
 
 %%% Local Variables:
